--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@types/node": "18.11.17",
-    "@types/react": "18.0.26"
+    "@types/react": "18.0.26",
+    "prettier": "2.8.1"
   }
 }
