--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
+    "eslint-config-prettier": "^8.5.0",
     "prettier": "2.8.1"
   }
 }
