--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   "devDependencies": {
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
+    "autoprefixer": "^10.4.13",
     "eslint-config-prettier": "^8.5.0",
-    "prettier": "2.8.1"
+    "postcss": "^8.4.20",
+    "prettier": "2.8.1",
+    "tailwindcss": "^3.2.4"
   }
 }
