--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@next/font": "13.0.7",
+    "@supabase/auth-helpers-nextjs": "^0.5.2",
+    "@supabase/auth-helpers-react": "^0.3.1",
+    "@supabase/auth-ui-react": "^0.2.6",
+    "@supabase/supabase-js": "^2.2.1",
     "daisyui": "^2.45.0",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.7",
@@ -26,6 +30,7 @@
     "postcss": "^8.4.20",
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
+    "supabase": "^1.27.0",
     "tailwindcss": "^3.2.4"
   }
 }
