--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-feather": "^2.0.10"
+    "react-feather": "^2.0.10",
+    "react-hook-form": "^7.41.5"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.8",
