--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@bytemd/plugin-gfm": "^1.20.0",
+    "@bytemd/plugin-highlight-ssr": "^1.20.0",
+    "@bytemd/react": "^1.20.0",
     "@next/font": "13.0.7",
     "@supabase/auth-helpers-nextjs": "^0.5.2",
     "@supabase/auth-helpers-react": "^0.3.1",
