--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@bytemd/plugin-breaks": "^1.20.0",
+    "@bytemd/plugin-frontmatter": "^1.20.0",
     "@bytemd/plugin-gfm": "^1.20.0",
     "@bytemd/plugin-highlight-ssr": "^1.20.0",
+    "@bytemd/plugin-math-ssr": "^1.20.0",
     "@bytemd/react": "^1.20.0",
     "@next/font": "13.0.7",
     "@supabase/auth-helpers-nextjs": "^0.5.2",
