--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@bytemd/plugin-breaks": "^1.20.0",
     "@bytemd/plugin-frontmatter": "^1.20.0",
+    "@bytemd/plugin-gemoji": "^1.20.0",
     "@bytemd/plugin-gfm": "^1.20.0",
     "@bytemd/plugin-highlight-ssr": "^1.20.0",
+    "@bytemd/plugin-math": "^1.20.0",
     "@bytemd/plugin-math-ssr": "^1.20.0",
     "@bytemd/react": "^1.20.0",
     "@next/font": "13.0.7",
