--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@bytemd/plugin-math": "^1.20.0",
     "@bytemd/plugin-math-ssr": "^1.20.0",
     "@bytemd/react": "^1.20.0",
+    "@headlessui/react": "^1.7.7",
     "@next/font": "13.0.7",
     "@supabase/auth-helpers-nextjs": "^0.5.2",
     "@supabase/auth-helpers-react": "^0.3.1",
