--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@supabase/auth-ui-react": "^0.2.6",
     "@supabase/supabase-js": "^2.2.1",
     "daisyui": "^2.45.0",
+    "dayjs": "^1.11.7",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.7",
     "next": "13.0.7",
